--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
         <link rel="stylesheet" href="styles.css" type="text/css" />
     </head>
     <body>
+     <!--
         <nav class="navbar" href="index.html"><img src="White logo.png" class="logo"></a>
             <ul>
-                <li><a>About Us</a></li>
-                <li><a>Events</a></li>
+                <li><a>Who Are We?</a></li>
+                <li><a>Events</a></li> // upcoming events on top & past events when you scroll down, mention give my certificate, a link with past events page
                 <li><a>Social Media</a></li>
+                <li>Testimonials<li>
                 <li><a>Join our Community</a></li>
-                <li><a>Contact Us!<a></li> <!--for collabs-->
+                <li><a>Contact Us!<a></li> (for collabs)
 
                 Dropdown
                 <li>Join our Team</li>
@@ -21,6 +23,12 @@
                 <li>Meet the Team</li>
             </ul>
         </nav>
-        
+        <footer>
+            <ul>
+                <li>Network Partners</li>
+                <li>Our Past Collabs></li>
+            
+</footer>
+        -->
     </body>
     </html>
