--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
 
         <nav class="navbar">
             <a href="index.html"><img src="/images/logo.png" class="logo"></a>
+            <span class="website-name">Code Social</span>
             <ul>
-                <li><a href="#">Who Are We?</a></li>
-                <li><a href="#">Events</a></li> <!-- Upcoming events on top & past events when you scroll down, link to past events page -->
-                <li><a href="#">Social Media</a></li>
-                <li><a href="#">Contact Us!</a></li> <!-- For collaborations -->
+                <li>
+                    <a href="#">Live Events</a>
+                    <ul class="dropdown">
+                        <li><a href="#"> Why don't you react?</a></li>
+                    </ul>
+                </li>
 
                 <!-- Dropdown -->
                 <li>
                     <a href="#">Join our Community</a>
                     <ul class="dropdown">
-                        <li><a href="#">Join our Team</a></li>
-                        <li><a href="#">Sign up to be a Speaker</a></li>
-                        <li><a href="#">Meet the Team</a></li>
+                        <li><a href="#"> Whatsapp</a></li>
+                        <li><a href="#">Discord</a></li>
                     </ul>
                 </li>
             </ul>
