--- a/index.html
+++ b/index.html
@@ -27,15 +27,25 @@
                         <li><a href="#"> Whatsapp</a></li>
                         <li><a href="#">Discord</a></li>
                     </ul>
+                <li class="hamburger-menu">
+                    <a href="javascript:void(0);" class="toggle-button">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </a>
+                    <ul class="dropdown">
+                        <li><a href="#"> Meet Our Team</a></li>
+                        <li><a href="#">Join Our Team</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Follow Us</a></li>
+                    </ul>
+                </li>
                 </li>
             </ul>
         </nav>
 
         <footer>
-            <ul>
-                <li>Network Partners</li>
-                <li>Our Past Collabs</li>
-            </ul>
+            
         </footer>
 
     </body>
