--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
                 </li>
             </ul>
         </nav>
+        
+        <section class="about-community">
+            <h2>About Community</h2>
+            <p>
+                Welcome to Code Social! Our community is a vibrant hub where developers, designers, and tech enthusiasts 
+                come together to share knowledge, collaborate on projects, and grow together. Whether you're just starting 
+                your journey or you're a seasoned professional, our community offers endless opportunities to learn, connect, 
+                and contribute. Join us and be part of a supportive network that fosters innovation and creativity!
+            </p>
+        </section>
 
         <footer>
             
