--- a/index.html
+++ b/index.html
@@ -47,11 +47,26 @@
         <section class="about-community">
             <h2>About Community</h2>
             <p>
-                Welcome to Code Social! Our community is a vibrant hub where developers, designers, and tech enthusiasts 
-                come together to share knowledge, collaborate on projects, and grow together. Whether you're just starting 
-                your journey or you're a seasoned professional, our community offers endless opportunities to learn, connect, 
-                and contribute. Join us and be part of a supportive network that fosters innovation and creativity!
+                Code Social Community is a learning-focused community dedicated to providing individuals with resources, opportunities to learn, grow, and develop their skills in various technologies. The community helps individuals to explore their interests, expand their knowledge, and connect with like-minded people.
+
+At Code Social Community, members have access to a wealth of resources and learning opportunities, including free learning sessions, mentorship programs, and peer-to-peer learning sessions. The community also provides opportunities for members to network and connect with others in the tech industry.
+
+In addition to its learning and networking opportunities, Code Social Community also serves as a hub for resources, tools, and other materials that can help members enhance their skills and stay up-to-date with the latest trends and best practices in the tech industry.
+
+Whether you are just starting out in your career or are a seasoned professional looking to expand your knowledge and skills, this community offers something for everyone. With its focus on hands-on learning, mentorship, and networking opportunities, Code Social Community is an excellent place to connect with like-minded individuals, build your skills, and take your career to the next level.
             </p>
+            <!-- Social Media Icons -->
+            <div class="social-icons">
+                <a href="https://wa.me/your-whatsapp-number" target="_blank">
+                    <img src="/images/whatsapp-icon.png" alt="WhatsApp">
+                </a>
+                <a href="https://discord.gg/MSTNyRSPYW" target="_blank">
+                    <img src="/images/discord-icon.png" alt="Discord">
+                </a>
+                <a href="https://www.linkedin.com/company/code-social/" target="_blank">
+                    <img src="/images/linkedin-icon.png" alt="LinkedIn">
+                </a>
+            </div>
         </section>
 
         <footer>
