i add favicon icon in this file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.css" type="text/css" />
+    <link rel="icon" href="/images/logo.png" type="image/png">
+
     <script src="script.js" defer></script>
   </head>
   <body>
