--- a/index.html
+++ b/index.html
@@ -1,77 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Code Social | Home</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css" type="text/css" />
-        <script src="script.js" defer></script>
-    </head>
-    <body>
+  <head>
+    <title>Code Social | Home</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles.css" type="text/css" />
+    <script src="script.js" defer></script>
+  </head>
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar">
+      <a href="index.html"><img src="/images/logo.png" class="logo" /></a>
+      <span class="website-name">Code Social</span>
+      <ul>
+        <li>
+          <a href="#">Live Events</a>
+          <ul class="dropdown">
+            <li><a href="#">Why don't you react?</a></li>
+          </ul>
+        </li>
 
-        <nav class="navbar">
-            <a href="index.html"><img src="/images/logo.png" class="logo"></a>
-            <span class="website-name">Code Social</span>
-            <ul>
-                <li>
-                    <a href="#">Live Events</a>
-                    <ul class="dropdown">
-                        <li><a href="#"> Why don't you react?</a></li>
-                    </ul>
-                </li>
+        <li>
+          <a href="#">Join our Community</a>
+          <ul class="dropdown">
+            <li><a href="#">Whatsapp</a></li>
+            <li><a href="#">Discord</a></li>
+          </ul>
+        </li>
 
-                <!-- Dropdown -->
-                <li>
-                    <a href="#">Join our Community</a>
-                    <ul class="dropdown">
-                        <li><a href="#"> Whatsapp</a></li>
-                        <li><a href="#">Discord</a></li>
-                    </ul>
-                <li class="hamburger-menu">
-                    <a href="javascript:void(0);" class="toggle-button">
-                        <span class="bar"></span>
-                        <span class="bar"></span>
-                        <span class="bar"></span>
-                    </a>
-                    <ul class="dropdown">
-                        <li><a href="#"> Meet Our Team</a></li>
-                        <li><a href="#">Join Our Team</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Follow Us</a></li>
-                    </ul>
-                </li>
-                </li>
-            </ul>
-        </nav>
-        
-        <section class="about-community">
-            <h2>About Community</h2>
-            <p>
-                Code Social Community is a learning-focused community dedicated to providing individuals with resources, opportunities to learn, grow, and develop their skills in various technologies. The community helps individuals to explore their interests, expand their knowledge, and connect with like-minded people.
+        <!-- Hamburger Menu -->
+        <li class="hamburger-menu">
+          <a href="javascript:void(0);" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </a>
+          <ul class="dropdown">
+            <li><a href="#">Meet Our Team</a></li>
+            <li><a href="#">Join Our Team</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Follow Us</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
 
-At Code Social Community, members have access to a wealth of resources and learning opportunities, including free learning sessions, mentorship programs, and peer-to-peer learning sessions. The community also provides opportunities for members to network and connect with others in the tech industry.
+    <!-- Hero Section -->
+    <section class="hero-section">
+      <div class="hero-content">
+        <h1>Empowering Coders, Building the Future</h1>
+        <p>
+          Welcome to Code Social, where developers come together to share
+          knowledge, create solutions, and build the next generation of
+          technology. Whether you're a beginner or an expert, there's a place
+          for you here!
+        </p>
+        <a href="#about" class="cta-button">Join Us Today</a>
+      </div>
+      <div class="hero-image">
+        <img src="images/coder.jpg" alt="Community of Coders" />
+      </div>
+    </section>
 
-In addition to its learning and networking opportunities, Code Social Community also serves as a hub for resources, tools, and other materials that can help members enhance their skills and stay up-to-date with the latest trends and best practices in the tech industry.
+    <!-- Features Section -->
+    <section class="features-section">
+      <h2>Why Join Code Social?</h2>
+      <div class="features">
+        <div class="feature">
+          <img src="/images/learn-now.jpeg" alt="Learning Resources" />
+          <h3>Extensive Learning Resources</h3>
+          <p>
+            Access free resources, courses, and mentorship from industry experts
+            to grow your skills in cutting-edge technologies.
+          </p>
+        </div>
+        <div class="feature">
+          <img src="/images/collective.webp" alt="Collaborative Projects" />
+          <h3>Collaborative Projects</h3>
+          <p>
+            Work with passionate developers on exciting open-source projects and
+            improve your hands-on experience.
+          </p>
+        </div>
+        <div class="feature">
+          <img src="/images/techEvent.webp" alt="Tech Events" />
+          <h3>Tech Events & Workshops</h3>
+          <p>
+            Stay updated with regular live events, webinars, and coding
+            workshops designed to expand your network and knowledge.
+          </p>
+        </div>
+      </div>
+    </section>
 
-Whether you are just starting out in your career or are a seasoned professional looking to expand your knowledge and skills, this community offers something for everyone. With its focus on hands-on learning, mentorship, and networking opportunities, Code Social Community is an excellent place to connect with like-minded individuals, build your skills, and take your career to the next level.
-            </p>
-            <!-- Social Media Icons -->
-            <div class="social-icons">
-                <a href="https://wa.me/your-whatsapp-number" target="_blank">
-                    <img src="/images/whatsapp-icon.png" alt="WhatsApp">
-                </a>
-                <a href="https://discord.gg/MSTNyRSPYW" target="_blank">
-                    <img src="/images/discord-icon.png" alt="Discord">
-                </a>
-                <a href="https://www.linkedin.com/company/code-social/" target="_blank">
-                    <img src="/images/linkedin-icon.png" alt="LinkedIn">
-                </a>
-            </div>
-        </section>
+    <!-- About Community Section -->
+    <section class="about-community" id="about">
+      <h2>About Community</h2>
+      <p>
+        Code Social Community is a learning-focused community dedicated to
+        providing individuals with resources, opportunities to learn, grow, and
+        develop their skills in various technologies. The community helps
+        individuals to explore their interests, expand their knowledge, and
+        connect with like-minded people.
+      </p>
+      <p>
+        At Code Social Community, members have access to a wealth of resources
+        and learning opportunities, including free learning sessions, mentorship
+        programs, and peer-to-peer learning sessions. The community also
+        provides opportunities for members to network and connect with others in
+        the tech industry.
+      </p>
+      <p>
+        Whether you are just starting out in your career or are a seasoned
+        professional looking to expand your knowledge and skills, this community
+        offers something for everyone. With its focus on hands-on learning,
+        mentorship, and networking opportunities, Code Social Community is an
+        excellent place to connect with like-minded individuals, build your
+        skills, and take your career to the next level.
+      </p>
+      <!-- Social Media Icons -->
+      <div class="social-icons">
+        <a href="https://wa.me/your-whatsapp-number" target="_blank">
+          <img src="/images/whatsapp-icon.png" alt="WhatsApp" />
+        </a>
+        <a href="https://discord.gg/MSTNyRSPYW" target="_blank">
+          <img src="/images/discord-icon.png" alt="Discord" />
+        </a>
+        <a href="https://www.linkedin.com/company/code-social/" target="_blank">
+          <img src="/images/linkedin-icon.png" alt="LinkedIn" />
+        </a>
+      </div>
+    </section>
 
-        <footer>
-            
-        </footer>
-
-    </body>
+    <!-- Footer -->
+    <footer>
+      <p>&copy; 2024 Code Social. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
