HTML Changes, Script.js Changes
Logo Path Update , Dropdown Structure Fix , Hamburger Menu Toggle Button , Alt Tags for Images , Linking the JavaScript File , Dropdown Functionality , Hamburger Menu Toggle , Optimized Navbar Toggle for Small Screens

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css" type="text/css">
     <script src="script.js" defer></script>
+    
 </head>
 
 <body>
 
     <nav class="navbar">
-        <a href="index.html"><img src="C:\Users\Ananya\OneDrive\Documents\GitHub\official-website\images\logo.png"
-                class="logo"></a>
+        <a href="index.html"><img src="images/logo.png" class="logo" alt="Code Social logo"></a>
         <span class="website-name">Code Social</span>
         <ul>
             <li>
@@ -27,9 +27,10 @@
             <li>
                 <a href="#">Join our Community</a>
                 <ul class="dropdown">
-                    <li><a href="#"> Whatsapp</a></li>
+                    <li><a href="#">Whatsapp</a></li>
                     <li><a href="#">Discord</a></li>
                 </ul>
+            </li>
             <li class="hamburger-menu">
                 <a href="javascript:void(0);" class="toggle-button">
                     <span class="bar"></span>
@@ -42,7 +43,6 @@
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="#">Follow Us</a></li>
                 </ul>
-            </li>
             </li>
         </ul>
     </nav>
@@ -70,22 +70,19 @@
         <!-- Social Media Icons -->
         <div class="social-icons">
             <a href="https://wa.me/your-whatsapp-number" target="_blank">
-                <img src="C:\Users\Ananya\OneDrive\Documents\GitHub\official-website\images\whatsapp-icon.png"
-                    alt="WhatsApp">
+                <img src="images/whatsapp-icon.png" alt="WhatsApp">
             </a>
             <a href="https://discord.gg/MSTNyRSPYW" target="_blank">
-                <img src="C:\Users\Ananya\OneDrive\Documents\GitHub\official-website\images\discord-icon.png"
-                    alt="Discord">
+                <img src="images/discord-icon.png" alt="Discord">
             </a>
             <a href="https://www.linkedin.com/company/code-social/" target="_blank">
-                <img src="C:\Users\Ananya\OneDrive\Documents\GitHub\official-website\images\linkedin-icon.png"
-                    alt="LinkedIn">
+                <img src="images/linkedin-icon.png" alt="LinkedIn">
             </a>
         </div>
     </section>
 
     <footer>
-
+        <p>&copy: 2024 Code Social.All rights reserved.</p>
     </footer>
 
 </body>
