--- a/index.html
+++ b/index.html
@@ -8,53 +8,39 @@
         <script src="script.js" defer></script>
     </head>
     <body>
-
         <nav class="navbar">
             <a href="index.html"><img src="/images/logo.png" class="logo"></a>
             <span class="website-name">Code Social</span>
-            <ul>
+            <ul class="navbar-links">
                 <li>
                     <a href="#">Live Events</a>
                     <ul class="dropdown">
-                        <li><a href="#"> Why don't you react?</a></li>
+                        <li><a href="#">Why don't you react?</a></li>
                     </ul>
                 </li>
-
-                <!-- Dropdown -->
                 <li>
                     <a href="#">Join our Community</a>
                     <ul class="dropdown">
-                        <li><a href="#"> Whatsapp</a></li>
+                        <li><a href="#">WhatsApp</a></li>
                         <li><a href="#">Discord</a></li>
                     </ul>
-                <li class="hamburger-menu">
-                    <a href="javascript:void(0);" class="toggle-button">
-                        <span class="bar"></span>
-                        <span class="bar"></span>
-                        <span class="bar"></span>
-                    </a>
-                    <ul class="dropdown">
-                        <li><a href="#"> Meet Our Team</a></li>
-                        <li><a href="#">Join Our Team</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Follow Us</a></li>
-                    </ul>
-                </li>
                 </li>
             </ul>
+            <div class="hamburger-menu">
+                <a href="javascript:void(0);" class="toggle-button">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </a>
+            </div>
         </nav>
-        
+
         <section class="about-community">
             <h2>About Community</h2>
             <p>
-                Code Social Community is a learning-focused community dedicated to providing individuals with resources, opportunities to learn, grow, and develop their skills in various technologies. The community helps individuals to explore their interests, expand their knowledge, and connect with like-minded people.
-
-At Code Social Community, members have access to a wealth of resources and learning opportunities, including free learning sessions, mentorship programs, and peer-to-peer learning sessions. The community also provides opportunities for members to network and connect with others in the tech industry.
-
-In addition to its learning and networking opportunities, Code Social Community also serves as a hub for resources, tools, and other materials that can help members enhance their skills and stay up-to-date with the latest trends and best practices in the tech industry.
-
-Whether you are just starting out in your career or are a seasoned professional looking to expand your knowledge and skills, this community offers something for everyone. With its focus on hands-on learning, mentorship, and networking opportunities, Code Social Community is an excellent place to connect with like-minded individuals, build your skills, and take your career to the next level.
+                Code Social Community is a learning-focused community dedicated to providing individuals with resources, opportunities to learn, grow, and develop their skills in various technologies...
             </p>
+
             <!-- Social Media Icons -->
             <div class="social-icons">
                 <a href="https://wa.me/your-whatsapp-number" target="_blank">
@@ -69,9 +55,6 @@ Whether you are just starting out in your career or are a seasoned professional 
             </div>
         </section>
 
-        <footer>
-            
-        </footer>
-
+        <footer></footer>
     </body>
 </html>
