--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <nav class="navbar">
-        <a href="index.html"><img src="C:\Users\Ananya\OneDrive\Documents\GitHub\official-website\images\logo.png"
+        <a href="index.html"><img src="images/logo.png"
                 class="logo"></a>
         <span class="website-name">Code Social</span>
         <ul>
@@ -70,15 +70,15 @@
         <!-- Social Media Icons -->
         <div class="social-icons">
             <a href="https://wa.me/your-whatsapp-number" target="_blank">
-                <img src="C:\Users\Ananya\OneDrive\Documents\GitHub\official-website\images\whatsapp-icon.png"
+                <img src="images/whatsapp-icon.png"
                     alt="WhatsApp">
             </a>
             <a href="https://discord.gg/MSTNyRSPYW" target="_blank">
-                <img src="C:\Users\Ananya\OneDrive\Documents\GitHub\official-website\images\discord-icon.png"
+                <img src="images/discord.png"
                     alt="Discord">
             </a>
             <a href="https://www.linkedin.com/company/code-social/" target="_blank">
-                <img src="C:\Users\Ananya\OneDrive\Documents\GitHub\official-website\images\linkedin-icon.png"
+                <img src="images/linkedin-icon.png"
                     alt="LinkedIn">
             </a>
         </div>
