--- a/index.html
+++ b/index.html
@@ -151,6 +151,14 @@
                     <li><a href="#">Discord</a></li>
                 </ul>
             </li>
+            <li>
+                <a href="learning.html">Learning</a>
+                <ul class="dropdown">
+                    <li><a href="#">Free Learning Resources</a></li>
+                    <li><a href="#">Mentorship Programs</a></li>
+                    <li><a href="#">Peer-to-Peer Sessions</a></li>
+                </ul>
+            </li> 
             <li class="hamburger-menu">
                 <a href="javascript:void(0);" class="toggle-button">
                     <span class="bar"></span>
