--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles.css" type="text/css" />
     <script src="script.js" defer></script>
     <script type="text/javascript" src="darkmode.js" defer></script>
+    <link rel="icon" type="image/png" href="images/favicon.png">
+
     <style>
         /* General Styles */
         body {
