view enhancement of the frontend files

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <a href="https://www.linkedin.com/company/code-social/" target="_blank">
                 <img src="images/linkedin-icon.png" alt="LinkedIn">
             </a>
-            <a href="https://github.com/Code-Social" target="_blank"></a>
-                <img src="/images/gitHub.png" alt="Discord">
+            <a href="https://github.com/Code-Social" target="_blank">
+                <img src="images/gitHub.png" alt="GitHub">
             </a>
         </div>
     </section>
@@ -192,6 +192,7 @@
                 events.push({ date, title });
                 generateCalendar();
                 document.getElementById('event-title').value = '';
+                document.getElementById('event-date').value = '';
             }
         });
 
