Logo & Social Icon fixed

--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
 </head>
 
 <body>
-
     <nav class="navbar">
-
-        <a href="index.html"><img src="/official-website/images/logo.png"
+        <a href="index.html"><img src="images/logo1.svg"
                 class="logo"></a>
         <span class="website-name">Code Social</span>
-        <ul>
+        <ul class="nav-links">
             <li>
                 <a href="#">Live Events</a>
                 <ul class="dropdown">
@@ -65,16 +63,16 @@
         <!-- Social Media Icons -->
         <div class="social-icons">
             <a href="https://wa.me/your-whatsapp-number" target="_blank">
-                <img src="images/whatsapp-icon.png" alt="WhatsApp">
+                <img src="images/whatsapp.png" alt="WhatsApp">
             </a>
             <a href="https://discord.gg/MSTNyRSPYW" target="_blank">
-                <img src="images/discord-icon.png" alt="Discord">
+                <img src="images/discord.png" alt="Discord">
             </a>
             <a href="https://www.linkedin.com/company/code-social/" target="_blank">
-                <img src="images/linkedin-icon.png" alt="LinkedIn">
+                <img src="images/linkedin.png" alt="LinkedIn">
             </a>
-            <a href="https://github.com/Code-Social" target="_blank"></a>
-                <img src="/images/gitHub.png" alt="Discord">
+            <a href="https://github.com/Code-Social" target="_blank">
+                <img src="images/github_new.png" alt="GitHub">
             </a>
         </div>
     </section>
@@ -101,20 +99,20 @@
                 <div class="footer-grid">
                     <!-- Logo and About Section -->
                     <div class="footer-logo-section">
-                        <img class="footer-logo" src="/official-website/images/logo.png" alt="Logo" />
+                        <img class="footer-logo" src="images/logo.png" alt="Logo" />
                         <p class="footer-text">Code Social Community is a vibrant and inclusive space for tech enthusiasts to learn, grow, and connect. Founded in 2023, our mission is to empower individuals with resources, mentorship, and 
                             opportunities to cultivate their skills, explore their interests, 
                             and collaborate with like-minded peers. Join us on our journey to create something extraordinary together!</p>
                         <ul class="social-icons">
                             <li><a href="https://wa.me/your-whatsapp-number" target="_blank">
-                                <img src="./images/whatsapp-icon.png" alt="WhatsApp"></a>
+                                <img src="./images/whatsapp.png" alt="WhatsApp"></a>
                             </li>
                             <li><a href="https://discord.gg/MSTNyRSPYW" target="_blank">
-                                <img src="./images/discord-icon.png" alt="Discord">
+                                <img src="./images/discord.png" alt="Discord">
                             </a>
                             </li>
                             <li><a href="https://www.linkedin.com/company/code-social/" target="_blank">
-                                <img src="./images/linkedin-icon.png" alt="LinkedIn">
+                                <img src="./images/linkedin.png" alt="LinkedIn">
                             </a>
                             </li>
                         </ul>
