--- a/index.html
+++ b/index.html
@@ -95,9 +95,12 @@
         <div class="calendar">
             <div class="calendar-header">
                 <button id="prev-month">◀</button>
-                <span id="current-month"></span>
+                <div class="month-year-box" id="current-month">
+                    <!-- Current month will be displayed here -->
+                </div>
                 <button id="next-month">▶</button>
             </div>
+            
             <div class="calendar-grid" id="calendar-grid"></div>
         </div>
     </section>
