--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="script.js" defer></script>
     <script type="text/javascript" src="darkmode.js" defer></script>
     <head>
-        <link rel="icon" href="/images/logo.png" type="image/x-icon">
+        <link rel="icon" href="/images/logo.png" type="image/png">
       </head>
       
 </head>
