Changed favicon to new design

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="script.js" defer></script>
     <script type="text/javascript" src="darkmode.js" defer></script>
     <link
-     rel="icon" type="image/png" href="images/icon.png">
+     rel="icon" type="image/png" href="images/logo copy.png">
 
     <style>
         /* General Styles */
