--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar">
 
-        <a href="index.html"><img src="/official-website/images/logo.png"
+        <a href="index.html"><img src="images/code_social_.jpg"
                 class="logo"></a>
         <span class="website-name">Code Social</span>
         <ul>
