commiting files before modifying js

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <p class="footer-title">Help</p>
                         <ul class="footer-list">
                             <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Volunteer Opportunities</a></li>
+                            <li><a href="./volunteering-oppurtunities/volunteer-opp-page.html">Volunteer Opportunities</a></li>
                             <li><a href="#">Terms & Conditions</a></li>
                         </ul>
                     </div>
