--- a/index.html
+++ b/index.html
@@ -7,41 +7,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css" type="text/css" />
     <script src="script.js" defer></script>
-    <script type="text/javascript" src="darkmode.js" defer></script>
+    <script src="darkmode.js" defer></script>
     <link rel="icon" type="image/png" href="images/logo copy.png">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">      
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
 <body>
 
-    <nav class="navbar">
-        <a href="index.html" class="flex"><img src="/images/logo.png" class="logo">
-            <span class="website-name tracking-tight ">Code Social</span></a>
+    <nav class="navbar" role="navigation" aria-label="Main Navigation">
+        <a href="index.html" class="flex">
+            <img src="/images/logo.png" class="logo" alt="Code Social Logo">
+            <span class="website-name tracking-tight">Code Social</span>
+        </a>
 
-
-
-        <!-- Hamburger Menu -->
-        <div class="hamburger-menu">
-            <div class="toggle-button">
-                <img src="/images/hamburger.png" alt="open" id="hamburger-img">
-
+        <div class="hamburger-menu" aria-label="Menu">
+            <div class="toggle-button" aria-haspopup="true" aria-controls="navbar-links" aria-expanded="false">
+                <img src="/images/hamburger.png" alt="Open Menu" id="hamburger-img">
             </div>
         </div>
 
-        <!-- Navbar Links -->
-        <ul class="navbar-links flex  ">
+        <ul class="navbar-links flex" id="navbar-links">
             <li class="ml-20">
-                <a href="maintenance.html">Live Events</a>
-                <ul class="dropdown  ">
-                    <li><a href="maintenance.html">Why don't you react?</a></li>
-
+                <a href="live-events.html">Live Events</a>
+                <ul class="dropdown">
+                    <li><a href="event-detail.html">Why don't you react?</a></li>
                 </ul>
             </li>
             <li class="community">
-                <a href="maintenance.html">Join Our Community</a>
+                <a href="community.html">Join Our Community</a>
                 <ul class="dropdown">
-                    <li><a href="maintenance.html">WhatsApp</a></li>
-                    <li><a href="maintenance.html">Discord</a></li>
+                    <li><a href="whatsapp.html">WhatsApp</a></li>
+                    <li><a href="discord.html">Discord</a></li>
                 </ul>
             </li>
             <li>
@@ -51,64 +47,52 @@
                     <li><a href="#">Mentorship Programs</a></li>
                     <li><a href="#">Peer-to-Peer Sessions</a></li>
                 </ul>
-            </li> 
-            <li class="hamburger-menu">
-                <div class="toggle-button">
-                    <button class="bar"></button>
-                    <button class="bar"></button>
-                    <button class="bar"></button>
-                </div>
+            </li>
+            <li>
+                <a href="#">Meet Our Team</a>
                 <ul class="dropdown">
-                    <li><a href="#"> Meet Our Team</a></li>
                     <li><a href="#">Join Our Team</a></li>
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="#">Follow Us</a></li>
                 </ul>
             </li>
             <li>
-                <a href="maintenance.html">Follow Us</a>
+                <a href="follow-us.html">Follow Us</a>
             </li>
-            <!-- Dark Mode Toggle -->
             <li>
-                <button id="theme-toggle" class="theme-toggle-btn  ">
-                    <img src="/images/dark-mode.png" alt="theme-mode" id="theme-toggle-icon">
+                <button id="theme-toggle" class="theme-toggle-btn" aria-label="Toggle Dark Mode">
+                    <img src="/images/dark-mode.png" alt="Toggle theme" id="theme-toggle-icon">
                 </button>
-                <!-- when light mode is active -> use "dark-mode.png" and when dark mode is active -> use "light-mode.png" -->
             </li>
         </ul>
     </nav>
-
 
     <section class="about-community">
         <h2>About Community</h2>
         <p>
             Code Social Community is a learning-focused community dedicated to providing individuals with resources, opportunities to learn, grow, and develop their skills in various technologies. The community helps individuals to explore their interests, expand their knowledge, and connect with like-minded people.
-
             At Code Social Community, members have access to a wealth of resources and learning opportunities, including free learning sessions, mentorship programs, and peer-to-peer learning sessions. The community also provides opportunities for members to network and connect with others in the tech industry.
-
             In addition to its learning and networking opportunities, Code Social Community also serves as a hub for resources, tools, and other materials that can help members enhance their skills and stay up-to-date with the latest trends and best practices in the tech industry.
-
             Whether you are just starting out in your career or are a seasoned professional looking to expand your knowledge and skills, this community offers something for everyone. With its focus on hands-on learning, mentorship, and networking opportunities, Code Social Community is an excellent place to connect with like-minded individuals, build your skills, and take your career to the next level.
         </p>
-        <!-- Social Media Icons -->
+
         <div class="social-icons">
-            <a href="https://wa.me/your-whatsapp-number" target="_blank">
+            <a href="https://wa.me/your-whatsapp-number" target="_blank" rel="noopener noreferrer">
                 <img src="images/whatsapp-icon.png" alt="WhatsApp">
             </a>
-            <a href="https://discord.gg/MSTNyRSPYW" target="_blank">
+            <a href="https://discord.gg/MSTNyRSPYW" target="_blank" rel="noopener noreferrer">
                 <img src="images/discord-icon.png" alt="Discord">
             </a>
-            <a href="https://www.linkedin.com/company/code-social/" target="_blank">
+            <a href="https://www.linkedin.com/company/code-social/" target="_blank" rel="noopener noreferrer">
                 <img src="images/linkedin-icon.png" alt="LinkedIn">
             </a>
-            <a href="https://github.com/Code-Social" target="_blank">
-                <img src="images/gitHub.png" alt="Github">
+            <a href="https://github.com/Code-Social" target="_blank" rel="noopener noreferrer">
+                <img src="images/gitHub.png" alt="GitHub">
             </a>
-
         </div>
     </section>
 
-    <h2 class="calendar-title text-3xl mt-10   font-semibold">Event Calendar</h2>
+    <h2 class="calendar-title text-3xl mt-10 font-semibold">Event Calendar</h2>
 
     <section class="calendar-section">
         <div class="event-form">
@@ -122,50 +106,32 @@
 
         <div class="calendar">
             <div class="calendar-header">
-                <button id="prev-month">◀</button>
-                <div class="month-year-box" id="current-month">
-                    <!-- Current month will be displayed here -->
-                </div>
-                <button id="next-month">▶</button>
+                <button id="prev-month" aria-label="Previous Month">◀</button>
+                <div class="month-year-box" id="current-month"></div>
+                <button id="next-month" aria-label="Next Month">▶</button>
             </div>
 
             <div class="calendar-grid" id="calendar-grid"></div>
         </div>
     </section>
 
-
-    <br>
-
     <footer>
-        <section class="footer-section border border-gray-500 shadow-lg  ">
+        <section class="footer-section border border-gray-500 shadow-lg">
             <div class="container">
                 <div class="footer-grid">
-                    <!-- Logo and About Section -->
-
-                    <div class="footer-logo-section footer-item my-5  ">
-                        <a href="index.html" class="flex w-full justify-center  "><img src="/images/logo.png" class="logo mx-auto">
-                            <span class="website-name tracking-tight ">Code Social</span></a>
-
-                        <p class="footer-text">Code Social Community is a vibrant and inclusive space for tech enthusiasts to learn, grow, and connect. Founded in 2023, our mission is to empower individuals with resources, mentorship, and
-                            opportunities to cultivate their skills, explore their interests,
-
-                            and collaborate with like-minded peers. Join us on our journey to create something extraordinary together!</p>
-                        <ul class="social-icons py-5    ">
-                            <li><a href="https://wa.me/your-whatsapp-number" target="_blank">
-                                    <img src="./images/whatsapp-icon.png" alt="WhatsApp"></a>
-                            </li>
-                            <li><a href="https://discord.gg/MSTNyRSPYW" target="_blank">
-                                    <img src="./images/discord-icon.png" alt="Discord">
-                                </a>
-                            </li>
-                            <li><a href="https://www.linkedin.com/company/code-social/" target="_blank">
-                                    <img src="./images/linkedin-icon.png" alt="LinkedIn">
-                                </a>
-                            </li>
+                    <div class="footer-logo-section footer-item my-5">
+                        <a href="index.html" class="flex w-full justify-center">
+                            <img src="/images/logo.png" class="logo mx-auto" alt="Code Social Logo">
+                            <span class="website-name tracking-tight">Code Social</span>
+                        </a>
+                        <p class="footer-text">Code Social Community is a vibrant and inclusive space for tech enthusiasts to learn, grow, and connect. Founded in 2023, our mission is to empower individuals with resources, mentorship, and opportunities to cultivate their skills, explore their interests, and collaborate with like-minded peers. Join us on our journey to create something extraordinary together!</p>
+                        <ul class="social-icons py-5">
+                            <li><a href="https://wa.me/your-whatsapp-number" target="_blank" rel="noopener noreferrer"><img src="./images/whatsapp-icon.png" alt="WhatsApp"></a></li>
+                            <li><a href="https://discord.gg/MSTNyRSPYW" target="_blank" rel="noopener noreferrer"><img src="./images/discord-icon.png" alt="Discord"></a></li>
+                            <li><a href="https://www.linkedin.com/company/code-social/" target="_blank" rel="noopener noreferrer"><img src="./images/linkedin-icon.png" alt="LinkedIn"></a></li>
                         </ul>
                     </div>
 
-                    <!-- Company Links -->
                     <div class="footer-links footer-item">
                         <p class="footer-title">Quick Links</p>
                         <ul class="footer-list">
@@ -176,7 +142,6 @@
                         </ul>
                     </div>
 
-                    <!-- Help Links -->
                     <div class="footer-links footer-item">
                         <p class="footer-title">Help</p>
                         <ul class="footer-list">
@@ -188,89 +153,91 @@
                 </div>
 
                 <hr class="footer-divider" />
-                <p class="footer-bottom-text">© Copyright 2024, All Rights Reserved by Code-social</p>
+                <p class="footer-bottom-text">© Copyright 2024, All Rights Reserved by Code Social</p>
             </div>
         </section>
 
-
-
         <script>
-           const events = [
-    { date: '2024-10-06', title: 'React Workshop', color: '#4CAF50' },
-    { date: '2024-10-14', title: 'Node.js Webinar', color: '#FFC107' },
-    { date: '2024-10-21', title: 'CSS Masterclass', color: '#2196F3' },
-];
+            const events = [
+                { date: '2024-10-06', title: 'React Workshop', color: '#4CAF50' },
+                { date: '2024-10-14', title: 'Node.js Webinar', color: '#FFC107' },
+                { date: '2024-10-21', title: 'CSS Masterclass', color: '#2196F3' },
+            ];
 
-let currentMonth = new Date().getMonth();
-let currentYear = new Date().getFullYear();
+            let currentMonth = new Date().getMonth();
+            let currentYear = new Date().getFullYear();
 
-function generateCalendar() {
-    const calendarGrid = document.getElementById('calendar-grid');
-    const daysInMonth = new Date(currentYear, currentMonth + 1, 0).getDate();
+            function generateCalendar() {
+                const calendarGrid = document.getElementById('calendar-grid');
+                const daysInMonth = new Date(currentYear, currentMonth + 1, 0).getDate();
 
-    document.getElementById('current-month').innerText = new Date(currentYear, currentMonth).toLocaleString('default', { month: 'long', year: 'numeric' });
+                document.getElementById('current-month').innerText = new Date(currentYear, currentMonth).toLocaleString('default', { month: 'long', year: 'numeric' });
 
-    calendarGrid.innerHTML = '';
+                calendarGrid.innerHTML = '';
 
-    for (let day = 1; day <= daysInMonth; day++) {
-        const dayElement = document.createElement('div');
-        dayElement.className = 'calendar-day';
-        dayElement.innerText = day;
+                for (let day = 1; day <= daysInMonth; day++) {
+                    const dayElement = document.createElement('div');
+                    dayElement.className = 'calendar-day';
+                    dayElement.innerText = day;
 
-        const event = events.filter(e => 
-            new Date(e.date).getDate() === day && 
-            new Date(e.date).getMonth() === currentMonth && 
-            new Date(e.date).getFullYear() === currentYear // Keep this check to match the exact date
-        );
+                    const event = events.filter(e =>
+                        new Date(e.date).getDate() === day &&
+                        new Date(e.date).getMonth() === currentMonth &&
+                        new Date(e.date).getFullYear() === currentYear
+                    );
 
-        if (event.length) {
-            event.forEach(ev => {
-                const eventElement = document.createElement('div');
-                eventElement.className = 'event';
-                eventElement.style.backgroundColor = ev.color || '#4CAF50';
-                eventElement.innerText = ev.title;
-                eventElement.addEventListener('click', () => alert(ev.title)); // Simple alert for now, can be modal or tooltip.
-                dayElement.appendChild(eventElement);
+                    if (event.length) {
+                        event.forEach(ev => {
+                            const eventElement = document.createElement('div');
+                            eventElement.className = 'event';
+                            eventElement.style.backgroundColor = ev.color || '#4CAF50';
+                            eventElement.innerText = ev.title;
+                            eventElement.addEventListener('click', () => alert(ev.title));
+                            dayElement.appendChild(eventElement);
+                        });
+                    }
+
+                    // Highlight today
+                    if (new Date().getDate() === day && new Date().getMonth() === currentMonth && new Date().getFullYear() === currentYear) {
+                        dayElement.style.backgroundColor = '#d1ecf1';
+                    }
+
+                    calendarGrid.appendChild(dayElement);
+                }
+            }
+
+            // Event listeners for month navigation
+            document.getElementById('prev-month').addEventListener('click', () => {
+                currentMonth = (currentMonth === 0) ? 11 : currentMonth - 1;
+                currentYear = (currentMonth === 11) ? currentYear - 1 : currentYear;
+                generateCalendar();
             });
-        }
 
-        // Highlight today
-        if (new Date().getDate() === day && new Date().getMonth() === currentMonth && new Date().getFullYear() === currentYear) {
-            dayElement.style.backgroundColor = '#d1ecf1';
-        }
+            document.getElementById('next-month').addEventListener('click', () => {
+                currentMonth = (currentMonth === 11) ? 0 : currentMonth + 1;
+                currentYear = (currentMonth === 0) ? currentYear + 1 : currentYear;
+                generateCalendar();
+            });
 
-        calendarGrid.appendChild(dayElement);
-    }
-}
+            document.getElementById('add-event').addEventListener('click', () => {
+                const date = document.getElementById('event-date').value;
+                const title = document.getElementById('event-title').value;
+                const color = document.getElementById('event-color').value;
 
-// Event listeners for month navigation
-document.getElementById('prev-month').addEventListener('click', () => {
-    currentMonth = (currentMonth === 0) ? 11 : currentMonth - 1;
-    currentYear = (currentMonth === 11) ? currentYear - 1 : currentYear;
-    generateCalendar();
-});
+                if (date && title) {
+                    if (!events.some(ev => ev.date === date && ev.title === title)) {
+                        events.push({ date, title, color });
+                        generateCalendar();
+                        document.getElementById('event-title').value = '';
+                    } else {
+                        alert('Event already exists for this date and title.');
+                    }
+                }
+            });
 
-document.getElementById('next-month').addEventListener('click', () => {
-    currentMonth = (currentMonth === 11) ? 0 : currentMonth + 1;
-    currentYear = (currentMonth === 0) ? currentYear + 1 : currentYear;
-    generateCalendar();
-});
-
-document.getElementById('add-event').addEventListener('click', () => {
-    const date = document.getElementById('event-date').value;
-    const title = document.getElementById('event-title').value;
-    const color = document.getElementById('event-color').value;
-
-    if (date && title) {
-        events.push({ date, title, color });
-        generateCalendar();
-        document.getElementById('event-title').value = '';
-    }
-});
-
-document.addEventListener('DOMContentLoaded', generateCalendar);
-
+            document.addEventListener('DOMContentLoaded', generateCalendar);
         </script>
+    </footer>
 </body>
 
 </html>
