created mentor section with complete css and styling

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <button class="bar"></button>
                 </div>
                 <ul class="dropdown">
-                    <li><a href="#">Meet Our Team</a></li>
+                    <li><a href="mentorship.html">Meet Our Team</a></li>
                     <li><a href="#">Join Our Team</a></li>
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="#">Follow Us</a></li>
